--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="text" id="aboutText"></div>
     <div class="photo">
-      <img src="c:\Users\User\Pictures\Screenshots\Снимок экрана 2024-03-20 084223.png" alt="Моє фото">
+      <img src="Снимок%20экрана%202024-03-20%20084223.png" alt="Моє фото">
     </div>
   </div>
 <h2>Мої проєкти</h2>
